Adição da lista de Esportes Coletivos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+ <h1>Seu Próximo Esporte</h1>
+
+ <h2>Esportes Coletivos</h2>
+  <ul id="nao-ordenada">
+    <li>Voleibol</li>
+    <img src="Voleibol.jpeg" alt="">
+    <li>Handebol</li>
+    <img src="Handebol.jpeg" alt="">
+    <li>Futevôlei</li>
+    <img src="Futevôlei.jpeg" alt="">
+    <li>Futebol</li>
+    <img src="Futebol.jpeg" alt="">
+    <li>Basquetebol</li>
+    <img src="Basquetebol.jpg" alt="">
+  </ul>
+
 </body>
 </html>
