Adição da lista de Esportes Individuais

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
     <li>Basquetebol</li>
     <img src="Basquetebol.jpg" alt="">
   </ul>
+  
+  <h2>Esportes Individuais</h2>
+  <ol id="ordenada">
+    <li>Atletismo</li>
+    <img src="imagens/atletismo.webp" alt="">
+    <li>Boxing</li>
+    <img src="imagens/boxing.webp" alt="">
+    <li>Esgrima/li>
+    <img src="imagens/esgrima.jpeg" alt="">
+    <li>Halterofilismo</li>
+    <img src="imagens/halterofilismo.jpeg" alt="">
+    <li>Tênis</li>
+    <img src="imagens/tenis.jpeg" alt="">
+  </ol>
 
 </body>
 </html>
