--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Esportes</title>
+  
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,15 +12,15 @@
  <h2>Esportes Coletivos</h2>
   <ul id="nao-ordenada">
     <li>Voleibol</li>
-    <img src="Voleibol.jpeg" alt="">
+    <img src="imagens/Voleibol.jpeg" alt="">
     <li>Handebol</li>
-    <img src="Handebol.jpeg" alt="">
+    <img src="imagens/Handebol.jpeg" alt="">
     <li>Futevôlei</li>
-    <img src="Futevôlei.jpeg" alt="">
+    <img src="imagens/Futevôlei.jpeg" alt="">
     <li>Futebol</li>
-    <img src="Futebol.jpeg" alt="">
+    <img src="imagens/Futebol.jpeg" alt="">
     <li>Basquetebol</li>
-    <img src="Basquetebol.jpg" alt="">
+    <img src="imagens/Basquetebol.jpg" alt="">
   </ul>
   
   <h2>Esportes Individuais</h2>
@@ -29,7 +29,7 @@
     <img src="imagens/atletismo.webp" alt="">
     <li>Boxing</li>
     <img src="imagens/boxing.webp" alt="">
-    <li>Esgrima/li>
+    <li>Esgrima</li>
     <img src="imagens/esgrima.jpeg" alt="">
     <li>Halterofilismo</li>
     <img src="imagens/halterofilismo.jpeg" alt="">
